--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "arrowParens": "avoid",
   "tabWidth": 2,
   "printWidth": 80,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "semi": true,
+  "singleQuote": false
 }
