--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write **/**/*.{ts,json,handlebars}",
-    "start:ts": "ts-node server/index"
+    "start": "ts-node server/index"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
-    "express-session": "^1.17.2"
+    "express-session": "^1.17.2",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
